# rayactor

./: default.nix  rebar.config
client/: Connection.hs  Main.hs  default.nix  rayactor-client.cabal
lib/ftdi/: rebar.config
lib/ftdi/c_src/: Makefile  context.h  ftdi_drv.c  transfer.c  transfer.h
lib/ftdi/src/: ftdi.app.src  ftdi.erl  ftdi.hrl
src/: rayactor.app.src  rayactor.erl  rayactor.hrl  rayactor_app.erl  rayactor_client.erl  rayactor_client_protocol.erl  rayactor_color.erl  rayactor_config.erl  rayactor_dmx.erl  rayactor_enttec.erl  rayactor_router.erl  rayactor_sup.erl  rayactor_tcp.erl  rayactor_tcp_server.erl  rayactor_widget.erl
